addec changes
